# ForeverSetupLinux

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
source/: main.cpp  main.hpp
